--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Particles 2.0 demo</title>
     <link rel="stylesheet" href="./styles.css">
-    <script defer src="./index.js"></script>
+    <script type="module" src="./index.js"></script>
 </head>
 <body>
     <div id="particles-wrapper">
